--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,25 +16,24 @@
 	<title>Cardano Events</title>
 </head>
 
-<body style="padding-left:30px; padding-right: 30px;">
+<body style="padding:30px;">
 	<div class="pt-5">
 		<a style="margin-left: 10px; font-family:system-ui !important; color:#ff943d !important; font-size:1.6rem; text-align:left;"
 			href="/">
 			<img class="img-responsive" src="/assets/img/cardano-logo.png" style="width:140px;"></a>
 
-		<div class="pt-0 fw-bold" style="margin-left: 12px; color:#1133AD; font-size:4.4rem; line-height:0.8;">
+		<div class="pt-0 fw-bold" style="margin-top:10px; margin-bottom:16px; margin-left: 12px; color:#1133AD; font-size:4.4rem; line-height:0.8;">
 			Events
 		</div>
 
-		<div class="pt-6 fw-bold text-secondary" style="margin-left: 12px; font-size:2rem; line-height:1;">
+		<div class="pt-6 fw-bold text-secondary" style="margin-left: 12px; font-size:1.8rem; line-height:1;">
 			A list of Cardano events.
 		</div>
-
-		<main class="main-content">
-			{{ content }}
-		</main>
-
 	</div>
+
+	<main class="main-content">
+		{{ content }}
+	</main>
 </body>
 
 </html>
