--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
 			href="/">
 			<img class="img-responsive" src="/assets/img/cardano-logo.png" style="width:140px;"></a>
 
-		<div class="pt-0 fw-bold" style="margin-top:10px; margin-bottom:16px; margin-left: 12px; color:#1133AD; font-size:4.4rem; line-height:0.8;">
+		<div class="pt-0 fw-bold" style="margin-top:10px; margin-bottom:16px; margin-left: 12px; color:#1133AD; font-size:3rem; line-height:0.8; font-weight:bold;">
 			Events
 		</div>
 	</div>
