--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,4 +32,15 @@
 	</main>
 </body>
 
+<script src="/assets/js/jquery-3.2.1.min.js"></script>
+<script src="/assets/js/lodash.min.js"></script>
+<script src="/assets/js/moment.min.js"></script>
+<script src="/assets/js/numeral.min.js"></script>
+
+<script src="/assets/js/entityos-3.9.6.js"></script>
+<script src="/assets/js/entityos.util-5.0.9.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
+
+<script src="/assets/js/cardano.events-1.0.0.js"></script>
+
 </html>
