--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,6 +32,19 @@
 	<main class="main-content">
 		{{ content }}
 	</main>
+
+	<div class="mt-md-1 fw-bold lead" style="font-family: system-ui !important;">
+		A Cardano Community Project<br />Supported by <a href="https://selfdriven.foundation/about/octo"
+			target="_blank">selfdrivenOcto</a>.
+	</div>
+	<div class="mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
+		<a href="https://selfdriven.foundation" target="_blank"
+			class="text-decoration-none">
+			<img style="width: 140px !important"
+				src="/assets/img/selfdriven-2-logo-words-orange-transparent-header.png"
+				class="img-responsive mx-auto mb-4 w-50 w-md-25">
+		</a>
+	</div>
 </body>
 
 <script src="/assets/js/jquery-3.2.1.min.js"></script>
