--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,17 +33,19 @@
 		{{ content }}
 	</main>
 
-	<div class="mt-md-1 fw-bold lead" style="font-family: system-ui !important;">
-		A Cardano Community Project<br />Supported by <a href="https://selfdriven.foundation/about/octo"
-			target="_blank">selfdrivenOcto</a>.
-	</div>
-	<div class="mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
-		<a href="https://selfdriven.foundation" target="_blank"
-			class="text-decoration-none">
-			<img style="width: 140px !important"
-				src="/assets/img/selfdriven-2-logo-words-orange-transparent-header.png"
-				class="img-responsive mx-auto mb-4 w-50 w-md-25">
-		</a>
+	
+	<div class="p-3 border-top">
+		<div class="mt-md-1 fw-bold" style="font-family: system-ui !important;">
+			A Cardano Community Project supported by
+		</div>
+		<div class="mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
+			<a href="https://selfdriven.foundation" target="_blank"
+				class="text-decoration-none">
+				<img style="width: 140px !important"
+					src="/assets/img/selfdriven-2-logo-words-orange-transparent-header.png"
+					class="img-responsive mx-auto mb-4 w-50 w-md-25">
+			</a>
+		</div>
 	</div>
 </body>
 
