--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -36,7 +36,7 @@
 	
 	<div class="p-3 border-top">
 		<div class="mt-md-1 fw-bold" style="font-family: system-ui !important;">
-			A Cardano Community Project supported by
+			A Cardano Community Project Supported By
 		</div>
 		<div class="mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
 			<a href="https://selfdriven.foundation" target="_blank"
