--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -36,7 +36,7 @@
 	
 	<div class="p-3 border-top">
 		<div class="mt-md-1 fw-bold" style="font-family: system-ui !important;">
-			A Cardano Community Project Supported By
+			Other Community Projects Supported By
 		</div>
 		<div class="mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
 			<a href="https://selfdriven.foundation" target="_blank"
@@ -46,6 +46,25 @@
 					class="img-responsive mx-auto mb-4 w-50 w-md-25">
 			</a>
 		</div>
+		<ul>
+			<li class="mt-2 text-muted" style="font-family: system-ui !important;">
+				Cardano Ninja | <a href="https://cardano.ninja" target="_blank"
+					class="text-secondary">cardano.ninja <i
+						class="fe fe-external-link"></i></a>
+			</li>
+
+			<li class="mt-2 text-muted" style="font-family: system-ui !important;">
+				Cardano Build | <a href="https://cardano.build" target="_blank"
+					class="text-secondary">cardano.build <i
+						class="fe fe-external-link"></i></a>
+			</li>
+
+			<li class="mt-3 pt-3 text-secondary border-top"
+				style="font-family: system-ui !important;">
+				<a href="https://cardanowallets.io" target="_blank"
+					class="text-secondary">cardanowallets.io <i class="fe fe-external-link"></i></a>
+			</li>
+		</ul>
 	</div>
 </body>
 
