--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -48,21 +48,16 @@
 		</div>
 		<ul>
 			<li class="mt-2 text-muted" style="font-family: system-ui !important;">
-				Cardano Ninja | <a href="https://cardano.ninja" target="_blank"
-					class="text-secondary">cardano.ninja <i
-						class="fe fe-external-link"></i></a>
+				<a href="https://cardano.ninja" target="_blank">cardano.ninja</a>
 			</li>
 
 			<li class="mt-2 text-muted" style="font-family: system-ui !important;">
-				Cardano Build | <a href="https://cardano.build" target="_blank"
-					class="text-secondary">cardano.build <i
-						class="fe fe-external-link"></i></a>
+				<a href="https://cardano.build" target="_blank">cardano.build</a>
 			</li>
 
-			<li class="mt-3 pt-3 text-secondary border-top"
+			<li class="mt-3 pt-3 text-secondary"
 				style="font-family: system-ui !important;">
-				<a href="https://cardanowallets.io" target="_blank"
-					class="text-secondary">cardanowallets.io <i class="fe fe-external-link"></i></a>
+				<a href="https://cardanowallets.io" target="_blank">cardanowallets.io</a>
 			</li>
 		</ul>
 	</div>
