--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,17 +47,20 @@
 			</a>
 		</div>
 		<ul>
-			<li class="mt-2 text-muted" style="font-family: system-ui !important;">
-				<a href="https://cardano.ninja" target="_blank">cardano.ninja</a>
+			<li class="mt-2" style="font-family: system-ui !important;">
+				<a href="https://cardano.ninja" target="_blank"
+					class="text-secondary">cardano.ninja</a>
 			</li>
 
-			<li class="mt-2 text-muted" style="font-family: system-ui !important;">
-				<a href="https://cardano.build" target="_blank">cardano.build</a>
+			<li class="mt-2" style="font-family: system-ui !important;">
+				<a href="https://cardano.build" target="_blank"
+					class="text-secondary">cardano.build</a>
 			</li>
 
-			<li class="mt-3 pt-3 text-secondary"
+			<li class="mt-2"
 				style="font-family: system-ui !important;">
-				<a href="https://cardanowallets.io" target="_blank">cardanowallets.io</a>
+				<a href="https://cardanowallets.io" target="_blank"
+					class="text-secondary">cardanowallets.io</a>
 			</li>
 		</ul>
 	</div>
