--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,7 +33,20 @@
 		{{ content }}
 	</main>
 
-	
+	<div class="p-3 border-top">
+	<div id="resources" class="fw-bold mt-3">Resources</div>
+		<ul>
+			<li class="text-secondary" style="font-family: system-ui !important;">
+				<a href="https://github.com/selfdriven-octo/cardano-events/tree/main/data" target="_blank"
+					class="text-secondary">Events Index Data</a> - do a PR to update
+			</li>
+
+			<li class="text-secondary" style="font-family: system-ui !important;">
+				<a href="https://amplifycardano.io" target="_blank"
+					class="text-secondary">Amplify Cardano</a> - event & marketing support.
+			</li>
+		</ul>
+	</div>
 	<div class="p-3 border-top">
 		<div class="mt-md-1 fw-bold" style="font-family: system-ui !important;">
 			Other Community Projects Supported By
