--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -49,9 +49,9 @@
 	</div>
 	<div class="p-3 border-top">
 		<div class="mt-md-1 fw-bold" style="font-family: system-ui !important;">
-			Other Community Projects Supported By
+			Other Community Projects Supported By The <a href="https://selfdriven.foundation" target="_blank">selfdriven Foundation</a>
 		</div>
-		<div class="mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
+		<div class="d-none mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
 			<a href="https://selfdriven.foundation" target="_blank"
 				class="text-decoration-none">
 				<img style="width: 140px !important"
