--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -38,12 +38,12 @@
 		<ul>
 			<li class="text-secondary" style="font-family: system-ui !important;">
 				<a href="https://github.com/selfdriven-octo/cardano-events/tree/main/data" target="_blank"
-					class="text-secondary">Events Index Data</a> - do a PR to update
+					class="text-secondary">Events Index Data</a> - Do a PR to update.
 			</li>
 
 			<li class="text-secondary" style="font-family: system-ui !important;">
 				<a href="https://amplifycardano.io" target="_blank"
-					class="text-secondary">Amplify Cardano</a> - event & marketing support.
+					class="text-secondary">Amplify Cardano</a> - Event & marketing support.
 			</li>
 		</ul>
 	</div>
