--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -49,7 +49,7 @@
 	</div>
 	<div class="p-3 border-top">
 		<div class="mt-md-1 fw-bold" style="font-family: system-ui !important;">
-			Other Community Projects<br/>supported by the <a href="https://selfdriven.foundation" target="_blank">selfdriven Foundation</a>
+			Other Community Projects<br/>Supported by the <a href="https://selfdriven.foundation" target="_blank">selfdriven Foundation</a>
 		</div>
 		<div class="d-none mt-md-2 fw-bold lead" style="font-family: system-ui !important;">
 			<a href="https://selfdriven.foundation" target="_blank"
