--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -77,6 +77,9 @@
 			</li>
 		</ul>
 	</div>
+	<div class="p-3 border-top text-secondary">
+		Shared as Creative Commons Zero (CC0 - Public Domain)
+	</div>
 </body>
 
 <script src="/assets/js/jquery-3.2.1.min.js"></script>
